==> FHWan/Surtr/microcomputer/freshman/stm32f103/fire_hydrant/stm32f103zet6_ec20/HARDWARE/RFID/rc522.c <==
#include "sys.h"
#include "rc522.h"
#include "delay.h"
#include "usart.h"
#include "string.h"
#define   RC522_DELAY()  delay_us( 20 )

void SPI1_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    RCC_APB2PeriphClockCmd(	RC522_SPI_GPIO_ENABLED | RC522_SPI_GPIO_RST_ENABLED, ENABLE );//PORTA、B时钟使能

    // CS
    GPIO_InitStructure.GPIO_Pin = RC522_SPI_GPIO_PIN_CS;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; 		 //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 //IO口速度为50MHz
    GPIO_Init(RC522_SPI_GPIO, &GPIO_InitStructure);					 //根据设定参数初始化PF0、PF1

    // SCK
    GPIO_InitStructure.GPIO_Pin = RC522_SPI_GPIO_PIN_SCK;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; 		 //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 //IO口速度为50MHz
    GPIO_Init(RC522_SPI_GPIO , &GPIO_InitStructure);

    // MISO
    GPIO_InitStructure.GPIO_Pin = RC522_SPI_GPIO_PIN_MISO;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING; 		 //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 //IO口速度为50MHz
    GPIO_Init(RC522_SPI_GPIO , &GPIO_InitStructure);

    // MOSI
    GPIO_InitStructure.GPIO_Pin = RC522_SPI_GPIO_PIN_MOSI;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; 		 //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 //IO口速度为50MHz
    GPIO_Init(RC522_SPI_GPIO , &GPIO_InitStructure);

    // RST
    GPIO_InitStructure.GPIO_Pin = RC522_SPI_GPIO_PIN_RST;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP; 		 //推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;		 //IO口速度为50MHz
    GPIO_Init(RC522_SPI_GPIO_RST, &GPIO_InitStructure);

}
