==> FHWan/Surtr/microcomputer/freshman/stm32f429/light/stm32f429zg_ec20/HARDWARE/RC522/rc522.c <==
#include "sys.h"
#include "rc522.h"
#include "delay.h"
#include "string.h"
#include "led.h"
#define   RC522_DELAY()  delay_us( 20 )

void SPI1_Init(void)
{
    GPIO_InitTypeDef GPIO_Initure;
	__HAL_RCC_GPIOB_CLK_ENABLE();   //使能GPIOB时钟
	
    // CS
	GPIO_Initure.Pin=GPIO_PIN_3;
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Speed=GPIO_SPEED_FAST;     //快速
    HAL_GPIO_Init(GPIOB,&GPIO_Initure);	

    // SCK
	GPIO_Initure.Pin=GPIO_PIN_4;
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Speed=GPIO_SPEED_FAST;     //快速
    HAL_GPIO_Init(GPIOB,&GPIO_Initure);		

    // MISO
	GPIO_Initure.Pin=GPIO_PIN_8;
    GPIO_Initure.Mode=GPIO_MODE_INPUT;
    GPIO_Initure.Speed=GPIO_SPEED_FAST;//快速
    HAL_GPIO_Init(GPIOB,&GPIO_Initure);	
	
    // MOSI		
	GPIO_Initure.Pin=GPIO_PIN_6;
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Speed=GPIO_SPEED_FAST;//快速
    HAL_GPIO_Init(GPIOB,&GPIO_Initure);	
	
    // RST
	GPIO_Initure.Pin=GPIO_PIN_7;
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Speed=GPIO_SPEED_FAST;//快速
    GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
	HAL_GPIO_Init(GPIOB,&GPIO_Initure);	
	HAL_GPIO_WritePin(GPIOB,GPIO_PIN_7,GPIO_PIN_SET);

}
